# honeymcp

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.rs  deny.toml  docker-compose.yml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml  fuzz.yml  release.yml
benches/: detectors.rs  dispatcher.rs  logger.rs
docs/: DAY4_PLAN.md  DEPLOYMENT.md  MITRE-MAPPING.md  RUNBOOK.md  SLOS.md  SLSA.md  dashboard-v2-design.md  demo-day1.txt  personas.md  scope-decisions.md  threat-model.md
docs/blog/: 2026-04-24-first-week.md  announce-thread.md  day-3-retrospective.md  publish-checklist.md
docs/legal/: operator-banner.md  privacy-gdpr-lia.md
docs/state/: metrics.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: detector_input.rs  jsonrpc_parse.rs
migrations/: 20260424_0001_init.sql  20260424_0002_pgvector.sql
personas/: filesystem-admin.yaml  github-admin.yaml  postgres-admin.yaml  stripe-finance.yaml  vercel-admin.yaml
src/: dashboard.html  lib.rs  main.rs  observability.rs  server.rs  stats.rs  stix.rs
src/dashboard/: mod.rs
src/dashboard/static/: dashboard.css
src/dashboard/templates/: base.html  index.html
src/detect/: cve_59536.rs  mod.rs  prompt_injection.rs  recon.rs  secret_exfil.rs  shell_injection.rs  tool_enumeration.rs  unicode_anomaly.rs
src/logger/: mod.rs  operator.rs  postgres.rs
src/persona/: mod.rs
src/protocol/: jsonrpc.rs  mcp.rs  mod.rs
src/transport/: banner.html  banner.txt  http.rs  mod.rs  stdio.rs
tests/: mitre_mapping.rs  probes_cli.rs  property_detectors.proptest-regressions  property_detectors.rs  property_jsonrpc_parser.rs  property_persona_loader.rs
