[package]
name = "honeymcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Open-source MCP (Model Context Protocol) honeypot for collecting threat intelligence"
license = "Apache-2.0"
repository = "https://github.com/honeymcp/honeymcp"
readme = "README.md"
keywords = ["mcp", "honeypot", "security", "threat-intelligence"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "test-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
