[package]
name = "honeymcp"
version = "0.3.3"
edition = "2021"
rust-version = "1.88"
description = "Open-source MCP (Model Context Protocol) honeypot for collecting threat intelligence"
license = "Apache-2.0"
repository = "https://github.com/kosiorkosa47/honeymcp"
readme = "README.md"
keywords = ["mcp", "honeypot", "security", "threat-intelligence"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "fs", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tower_governor = "0.4"
async-stream = "0.3"
futures = "0.3"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "fs", "test-util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
