[package]
name = "honeymcp"
version = "0.6.0-rc.1"
edition = "2021"
rust-version = "1.88"
description = "Open-source MCP (Model Context Protocol) honeypot for collecting threat intelligence"
license = "Apache-2.0"
repository = "https://github.com/kosiorkosa47/honeymcp"
readme = "README.md"
keywords = ["mcp", "honeypot", "security", "threat-intelligence"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "fs", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.11"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
tower_governor = "0.4"
async-stream = "0.3"
futures = "0.3"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Postgres backend (opt-in via --features postgres). SQLite remains the
# default storage for all use cases; Postgres unlocks pgvector + horizontal
# scale for the multi-region deployment described in docs/ARCHITECTURE.md.
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"], optional = true }

# OpenTelemetry exporter chain (opt-in via --features otel). When enabled,
# spans from the tracing layer are forwarded to an OTLP collector; when
# disabled, the stderr fmt layer is the only subscriber and there's zero
# extra dependency weight.
opentelemetry = { version = "0.31", optional = true }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "trace"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[features]
default = []
postgres = ["dep:sqlx"]
otel = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

[[bin]]
name = "honeymcp-probes"
path = "src/bin/probes.rs"

[[bin]]
name = "honeymcp"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "fs", "test-util"] }
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
